k8s/ingress-project/hello-world-tomcat/hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    run: web
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    run: web
